--- a/index.html
+++ b/index.html
@@ -885,9 +885,6 @@
     "scheduling/non_preemptive_shortest_job_first",
     "scheduling/round_robin",
     "scheduling/shortest_job_first",
-    "scripts/build_directory_md",
-    "scripts/validate_filenames",
-    "scripts/validate_solutions",
     "searches/binary_search",
     "searches/binary_tree_traversal",
     "searches/double_linear_search",
@@ -1041,7 +1038,7 @@
 
   const params = new URLSearchParams(window.location.search);
   window.lang = {
-    name: "python",
+    name: "pyodide",
     title: "Python",
     ext: "py",
     repo: "https://github.com/TheAlgorithms/Python",
