add link to R playground

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <a href="https://hatemhosny.github.io/thealgorithms-javascript/">JavaScript</a>
   -
   <a href="https://hatemhosny.github.io/thealgorithms-javascript/?lang=ts">TypeScript</a>
+  -
+  <a href="https://hatemhosny.github.io/thealgorithms-r/">R</a>
 </p>
 <p>
   Algorithm:
