--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
   <a href="https://hatemhosny.github.io/thealgorithms-javascript/?lang=ts"
     >TypeScript</a
   >
+  -
+  <a href="https://hatemhosny.github.io/thealgorithms-r/"
+    >R</a
+  >
 </p>
 <p>
   Algorithm:
